src/pages/es/v1.20.0/using-or/next.mdx
---
title: "Uso de OpenReplay con Next.js"
metaTitle: "Añadir el Tracker de OpenReplay a tu aplicación Next.js"
metaDescription: "Aprende cómo hacer funcionar el tracker en tu aplicación Next.js"
---
Hacer que el tracker funcione en una aplicación Next.js es bastante sencillo. Dado que Next.js funciona sobre React, el proceso es bastante similar; la principal dificultad proviene de las capacidades de renderizado del lado del servidor (Server Side Rendering) de Next.js.

Pero una vez que entiendas cómo funcionan y cómo estructurar tu código exclusivo de cliente, estarás rastreando a tus usuarios en un abrir y cerrar de ojos.

## Añadir el código de seguimiento

Si bien puedes obtener una versión para copiar y pegar del código directamente desde la plataforma cuando creas un nuevo proyecto, ese código es demasiado básico y podría no seguir las mejores prácticas esperadas por tu equipo o empresa.

### Componente Tracker

Este método ofrece un enfoque minimalista en el que inyectamos el tracker en la aplicación como un componente, que cargará la biblioteca de forma dinámica.
 
#### App Router (v14+) - use client

```jsx
'use client'
import {useEffect} from "react"
import Tracker from '@openreplay/tracker'

const tracker = new Tracker({
  projectKey: "",
  ingestPoint: "",
})

const Openreplay = () => {
  useEffect(() => {
    if (typeof window !== 'undefined') {
      tracker.start()
    }
  }, [])

  return null
}

export default Openreplay 
```
##### App Router - importar dinámicamente la instancia del componente Openreplay en el root layout
```jsx
import dynamic from "next/dynamic";

const OpenReplayNoSSR = dynamic(() => import('//import the Openreplay instance'), {
  ssr: false, //disables Server-side pre-rendering so window won't be undefined
})

export default function RootLayout({ children }) {
  return (
    <html lang="en" >
      <body>
        {children}
        <OpenReplayNoSSR />
      </body>
    </html >
  );
}

```


#### Componente normal (Next hasta v13)

```jsx
[...]

function TrackerComponent() {
const [tracker, setTracker] = React.useState(null);

  React.useEffect(() => {
    (async function () {
      const Tracker = await import("@openreplay/tracker");
      const openRelayTracker = new Tracker.default({
        projectKey: PROJECT_KEY,
        __DISABLE_SECURE_MODE: true,
      });

      setTracker(openRelayTracker);
    })();
  }, []);
[...]
```

### Tracker Context

este método te permite crear un contexto, que a su vez facilita el control del estado del tracker y la llamada a sus distintas API.

```jsx
import { createContext } from "react"
import {v4 as uuidV4} from 'uuid'
import { useReducer } from "react"

export const TrackerContext = createContext()

function defaultGetUserId() {
   return uuidV4() 
}

async function newTracker(config) {
    // we use dynamic import to make sure that tracker is started inside browser env
    const Tracker = await import("@openreplay/tracker");
    const getUserId = (config?.userIdEnabled && config?.getUserId) ? config.getUserId : defaultGetUserId
    let userId = null;

    const trackerConfig = {
        projectKey: config?.projectKey || process.env.NEXT_PUBLIC_OPENREPLAY_PROJECT_KEY
    }

    const tracker = new Tracker(trackerConfig);
    
    if(config?.userIdEnabled) {
        userId = getUserId()
        tracker.setUserID(userId)
    }
    return tracker

}

function reducer(state, action) {
        switch(action.type) {
            case 'init': {
                if(!state.tracker) {
                    console.log("Instantiaing the tracker for the first time...")
                    return {...state, tracker: newTracker(state.config)}
                }
                return state
            }
            case 'start': {
                console.log("Starting tracker...")
                state.tracker.start()
                return state
            }
        }
    }

export default function TrackerProvider({children, config = {}}) {
    let [state, dispatch] = useReducer(reducer, {tracker: null, config})
    let value = {
        startTracking: () => dispatch({type: 'start'}),
        initTracker: () => dispatch({type: 'init'})
    }

    return <TrackerContext.Provider value={value}>{children}</TrackerContext.Provider>
}
```

Este provider pone 2 métodos a disposición del usuario:

- `initTracker`: que instancia el tracker con la configuración proporcionada.
- `startTracking`: que activa el inicio del proceso de seguimiento.

Este provider también acepta un objeto de “configuración” que puedes extender para futuras funcionalidades. Este ejemplo te muestra cómo habilitar, de forma opcional, la capacidad de identificar de manera única a los usuarios. Puedes usar un UUID predeterminado que sería único para cada usuario cada vez que visiten la página. Como alternativa, puedes proporcionar una función `getUserId` personalizada como parte de la configuración. 

Con tu función personalizada, podrías proporcionar el ID de cliente de tu tienda, la dirección de correo electrónico del usuario o cualquier cosa que identifique de manera única al usuario dentro de tu aplicación. De esta forma puedes seguir sus session replays a lo largo del tiempo en caso de que tengan un problema particular que otros no estén reportando.

💡**Una nota para usuarios self-hosted**: si estás usando la versión self-hosted de OpenReplay, también tendrás que especificar la propiedad de configuración `ingestPoint`. Esta propiedad especifica el endpoint de ingestión para los datos del tracker. Los usuarios de la nube no necesitan esto, porque de forma predeterminada el tracker ya sabrá dónde está la versión SaaS de este endpoint, pero si lo estás alojando tú mismo, tendrás que especificarlo (debería ser algo como `https://openreplay.mydomain.com/ingest`) 

### Manejo del "projectKey" en tu código

A modo de nota, el `projectKey` que configuras es el que proporciona la plataforma de OpenReplay. Por razones de seguridad, este valor no debería almacenarse de forma fija (hardcoded) en tu código, sino más bien en algún tipo de archivo/sistema de configuración.

Para este ejemplo, aprovecho los archivos `.env` de Next. Lo que tienes que entender es que si no prefijas la variable de entorno con `NEXT_PUBLIC`, tu código de cliente (el tracker) no tendrá acceso a ella. 

Si esto no es aceptable, puedes usar `getStaticProps` dentro de la primera página que visitan tus usuarios para obtener ese valor antes de instanciar el tracker. Puedes ver ambos ejemplos a continuación.

## Uso del tracker context

Importa y envuelve tu aplicación con el `TrackerProvider` que creamos antes, de esta forma:

```jsx
import '../styles/globals.css'
import TrackerProvider from '../context/trackerContext'

function MyApp({ Component, pageProps }) {

  return <TrackerProvider>
        <Component {...pageProps} />
    </TrackerProvider>
}

export default MyApp
```

Este es el archivo `_app.js`, que actúa como punto de entrada para toda la aplicación.  

Y luego, puedes activar el seguimiento desde el componente que desees, así:

```jsx
import { useContext, useEffect } from 'react'
import { TrackerContext } from '../context/trackerContext'
import styles from '../styles/Home.module.css'

export default function YourComponent({projectKey}) {
    
    const {initTracker, startTracking} = useContext(TrackerContext)
    
    useEffect( () => {
       initTracker()
       startTracking()
    }, [])
//.... rest of your code
}
```

Si no necesitas tanto control, puedes unir ambos, el “mensaje de inicialización” y el “mensaje de inicio del seguimiento”, de modo que solo necesites llamar a una única función para poner en marcha el seguimiento.

## ¿Tienes preguntas?

Para ver el **código completo** de una aplicación funcional basada en Next, puedes consultar [este repositorio](https://github.com/deleteman/openreplay-next-example).

Si tienes algún problema al configurar el tracker en tu proyecto basado en Next, ¡contáctanos en nuestra [comunidad de Slack](https://slack.openreplay.com/) y pregúntale directamente a nuestros desarrolladores!
